--- a/SBstyle.css
+++ b/SBstyle.css
@@ -44,3 +44,9 @@ p
     from {box-shadow: 1px 1px 38px red;}
     to {box-shadow: 1px 1px 38px green;}
 }
+
+#logout
+{
+	font-size: 20px; float: right;
+    margin: 0px;
+}
